<resources>
    <string name="app_name">MutualMind</string>
    <string name="register">Register</string>
    <string name="login">
Login
</string>
    <string name="login_with">
Login with
</string>
    <string name="hello_welcome_str">
Hello, Welcome to
</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_member">Already member?</string>
    <string name="login_now">login now</string>
    <string name="hello_welcome_back">Hello, Welcome Back</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="not_member_yet">Not member yet?</string>
    <string name="home">Home</string>
    <string name="add_fund">Add Fund</string>
    <string name="profile">Profile</string>
    <string name="hi_user_">
        Hi,Shreyas </string>
    <string name="your_balance">
        Here’s Your Balance
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="investment">Investment</string>
    <string name="returns">Returns</string>
    <string name="top_gainer">
Top Gainer
</string>
    <string name="edit_profile_change_username"><![CDATA[Edit profile,change username >]]></string>
    <string name="invest_with_us">Invest With Us</string>
    <string name="my_transactions">My Transactions</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="avatar">avatar</string>
    <string name="fund_house">Fund House</string>
    <string name="category">Category</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="back">back</string>
    <string name="fund_information">Fund Information</string>
    <string name="amount">Amount</string>
    <string name="nav">NAV</string>
    <string name="add_to_portfolio">Add To Portfolio</string>
    <string name="performance">Performance</string>
    <string name="_1_year">1 Year</string>
    <string name="_6_months">6 Months</string>
    <string name="_3_months">3 Months</string>
    <string name="_1_month">1 Month</string>
    <string name="_1_week">1 Week</string>
    <string name="_1_day">1 Day</string>
    <string name="top_losers">Top Losers</string>

</resources>