<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/rectangle_3"
            android:layout_width="421dp"
            android:layout_height="248dp"
            android:layout_marginTop="-30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/register_rectangle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_welcome_str"
            android:layout_marginTop="96dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/lato_regular"
            android:textAppearance="@style/hello_welcome"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/hello_welcome"
            android:textColor="@color/white"
            android:layout_marginTop="130dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/lato_regular"/>
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_edtxt"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edtxt"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/confirm_password">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_edtxt"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/lato_regular"
        android:textAppearance="@style/register"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/green_dark"
        android:layout_marginTop="35dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="71dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_member"
            android:textAppearance="@style/login_with"
            android:fontFamily="@font/lato_regular"

          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textAppearance="@style/login_with"
            android:fontFamily="@font/lato_regular"
            android:layout_marginStart="5dp"
            android:textColor="@color/green_dark" />
    </LinearLayout>

</LinearLayout>