<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_3"
            android:layout_width="421dp"
            android:layout_height="248dp"
            android:layout_marginTop="-32dp"
            android:background="@drawable/register_rectangle" />


        <TextView
            android:id="@+id/login_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="66dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/login"
            android:textAppearance="@style/hello_welcome"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/hello_welcome_back"
            android:textAppearance="@style/hello_welcome" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/log_pass_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/log_log_btn"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/green_dark"
        android:fontFamily="@font/lato_regular"
        android:text="@string/login"
        android:textAppearance="@style/register"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/log_forgetpass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/forget_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_member_yet"
            android:textAppearance="@style/login_with" />

        <TextView
            android:id="@+id/log_joinnow_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text=" join now"
            android:textAppearance="@style/login_with"
            android:textColor="@color/green_dark" />
    </LinearLayout>

</LinearLayout>