<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FundInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fun_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/fund_information"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/login_with" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="300dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/performance"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <include
                android:id="@+id/scroll_layout"
                layout="@layout/returns"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fun_amount_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fun_nav_edt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nav"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fun_add_to_folio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/green_dark"
                android:fontFamily="@font/lato_regular"
                android:text="@string/add_to_portfolio"
                android:textAppearance="@style/login_with"
                app:cornerRadius="10dp"
                android:layout_marginBottom="20dp"/>


        </LinearLayout></ScrollView></LinearLayout>